@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////
 //
-// Copyright (c) 2012-2018 DreamWorks Animation LLC
+// Copyright (c) 2012-2019 DreamWorks Animation LLC
 //
 // All rights reserved. This software is distributed under the
 // Mozilla Public License 2.0 ( http://www.mozilla.org/MPL/2.0/ )
@@ -36,7 +36,8 @@
 #include <tbb/tick_count.h>
 #include <iostream>// for std::cerr
 #include <sstream>// for ostringstream
-#include <iomanip>//for setprecision
+#include <iomanip>// for setprecision
+#include "Formats.h"// for printTime
 
 namespace openvdb {
 OPENVDB_USE_VERSION_NAMESPACE
@@ -46,7 +47,7 @@ namespace util {
 /// @brief Simple timer for basic profiling.
 ///
 /// @code
-///    CpuTimer timer;
+///    util::CpuTimer timer;
 ///    // code here will not be timed!
 ///    timer.start("algorithm");
 ///    // code to be timed goes here
@@ -56,65 +57,130 @@ namespace util {
 /// or to time multiple blocks of code
 ///
 /// @code
-///    CpuTimer timer("algorithm 1");
+///    util::CpuTimer timer("algorithm 1");
 ///    // code to be timed goes here
 ///    timer.restart("algorithm 2");
 ///    // code to be timed goes here
 ///    timer.stop();
+/// @endcode
+///
+/// or to measure speedup between multiple runs
+///
+/// @code
+///    util::CpuTimer timer("algorithm 1");
+///    // code for the first run goes here
+///    const double t1 = timer.restart("algorithm 2");
+///    // code for the second run goes here
+///    const double t2 = timer.stop();
+///    std::cerr << "Algorithm 1 is " << (t2/t1)
+///              << " timers faster than algorithm 2\n";
+/// @endcode
+///
+/// or to measure multiple blocks of code with deferred output
+///
+/// @code
+///    util::CpuTimer timer();
+///    // code here will not be timed!
+///    timer.start();
+///    // code for the first run goes here
+///    const double t1 = timer.restart();//time in milliseconds
+///    // code for the second run goes here
+///    const double t2 = timer.restart();//time in milliseconds
+///    // code here will not be timed!
+///    util::printTime(std::cout, t1, "Algorithm 1 completed in ");
+///    util::printTime(std::cout, t2, "Algorithm 2 completed in ");
 /// @endcode
 class CpuTimer
 {
 public:
 
     /// @brief Initiate timer
-    CpuTimer() : mT0(tbb::tick_count::now()) {}
+    CpuTimer(std::ostream& os = std::cerr) : mOutStream(os), mT0(tbb::tick_count::now()) {}
 
-    /// @brief Prints message and re-start timer.
+    /// @brief Prints message and start timer.
     ///
     /// @note Should normally be followed by a call to stop()
-    CpuTimer(const std::string& msg) { this->start(msg); }
+    CpuTimer(const std::string& msg, std::ostream& os = std::cerr) : mOutStream(os), mT0() { this->start(msg); }
 
     /// @brief Start timer.
     ///
-    /// @note Should normally be followed by a call to time()
+    /// @note Should normally be followed by a call to milliseconds() or stop(std::string)
     inline void start() { mT0 = tbb::tick_count::now(); }
 
-    /// @brief Print message and re-start timer.
+    /// @brief Print message and start timer.
     ///
     /// @note Should normally be followed by a call to stop()
     inline void start(const std::string& msg)
     {
-        std::cerr << msg << " ... ";
+        mOutStream << msg << " ...";
         this->start();
     }
 
-    /// @brief Stop previous timer, print message and re-start timer.
+    /// @brief Return Time difference in milliseconds since construction or start was called.
     ///
-    /// @note Should normally be followed by a call to stop()
-    inline void restart(const std::string& msg)
-    {
-        this->stop();
-        this->start(msg);
-    }
-
-    /// Return Time diference in milliseconds since construction or start was called.
-    inline double delta() const
+    /// @note Combine this method with start() to get timing without any outputs.
+    inline double milliseconds() const
     {
         tbb::tick_count::interval_t dt = tbb::tick_count::now() - mT0;
         return 1000.0*dt.seconds();
     }
 
-    /// @brief Print time in milliseconds since construction or start was called.
-    inline void stop() const
+    /// @brief This method is identical to milliseconds() - will soon be deprecated
+    inline double delta() const { return this->milliseconds(); }
+
+    inline std::string time() const
     {
-        const double t = this->delta();
-        std::ostringstream ostr;
-        ostr << "completed in " << std::setprecision(3) << t << " ms\n";
-        std::cerr << ostr.str();
+        const double msec = this->milliseconds();
+        std::ostringstream os;
+        printTime(os, msec, "", "", true, 4, 1);
+        return os.str();
+    }
+
+    /// @brief Returns and prints time in milliseconds since construction or start was called.
+    ///
+    /// @note Combine this method with start(std::string) to print at start and stop of task being timed.
+    inline double stop() const
+    {
+        const double msec = this->milliseconds();
+        printTime(mOutStream, msec, " completed in ", "\n", true, 4, 1);
+        return msec;
+    }
+
+    /// @brief Returns and prints time in milliseconds since construction or start was called.
+    ///
+    /// @note Combine this method with start() to delay output to will completion of task being timed.
+    inline double stop(const std::string& msg) const
+    {
+        const double msec = this->milliseconds();
+        mOutStream << msg << " ...";
+        printTime(mOutStream, msec, " completed in ", "\n", true, 4, 3);
+        return msec;
+    }
+
+    /// @brief Re-start timer.
+    /// @return time in milliseconds since previous start or restart.
+    ///
+    /// @note Should normally be followed by a call to stop() or restart()
+    inline double restart()
+    {
+        const double delta = this->delta();
+        this->start();
+        return delta;
+    }
+
+    /// @brief Stop previous timer, print message and re-start timer.
+    /// @return time in milliseconds since previous start or restart.
+    ///
+    /// @note Should normally be followed by a call to stop() or restart()
+    inline double restart(const std::string& msg)
+    {
+        const double delta = this->stop();
+        this->start(msg);
+        return delta;
     }
 
 private:
-
+    std::ostream&   mOutStream;
     tbb::tick_count mT0;
 };// CpuTimer
 
@@ -125,6 +191,6 @@ private:
 
 #endif // OPENVDB_UTIL_CPUTIMER_HAS_BEEN_INCLUDED
 
-// Copyright (c) 2012-2018 DreamWorks Animation LLC
+// Copyright (c) 2012-2019 DreamWorks Animation LLC
 // All rights reserved. This software is distributed under the
 // Mozilla Public License 2.0 ( http://www.mozilla.org/MPL/2.0/ )
