@@ -1,6 +1,6 @@
 ///////////////////////////////////////////////////////////////////////////
 //
-// Copyright (c) 2012-2018 DreamWorks Animation LLC
+// Copyright (c) 2012-2019 DreamWorks Animation LLC
 //
 // All rights reserved. This software is distributed under the
 // Mozilla Public License 2.0 ( http://www.mozilla.org/MPL/2.0/ )
@@ -80,6 +80,21 @@ printNumber(std::ostream& os, uint64_t number,
     const std::string& tail = "\n",
     bool exact = true, int width = 8, int precision = 3);
 
+/// Output a time in milliseconds with the correct suffix (days, hours, minutes, seconds and milliseconds)
+/// @param os             the output stream
+/// @param milliseconds   the time to be output
+/// @param head           a string to be output before the time
+/// @param tail           a string to be output after the time
+/// @param exact          if true, also output the unmodified count, e.g., "4 seconds and 0.0 milliseconds (4000)"
+/// @param width          a fixed width for the numeric text
+/// @param precision      the number of digits after the decimal point
+/// @return 0, 1, 2, 3 or 4, denoting the order of magnitude of the time.
+OPENVDB_API int
+printTime(std::ostream& os, double milliseconds,
+    const std::string& head = "",
+    const std::string& tail = "\n",
+    bool exact = true, int width = 4, int precision = 1);
+
 
 ////////////////////////////////////////
 
@@ -135,6 +150,6 @@ FormattedInt<IntT> formattedInt(IntT n) { return FormattedInt<IntT>(n); }
 
 #endif // OPENVDB_UTIL_FORMATS_HAS_BEEN_INCLUDED
 
-// Copyright (c) 2012-2018 DreamWorks Animation LLC
+// Copyright (c) 2012-2019 DreamWorks Animation LLC
 // All rights reserved. This software is distributed under the
 // Mozilla Public License 2.0 ( http://www.mozilla.org/MPL/2.0/ )
